[tool.poetry]
name = "llmaz"
version = "0.0.1"
description = "☸️ Easy, advanced inference platform for large language models on Kubernetes"
authors = ["InftyAI Community"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.23.5"
modelscope = "^1.17.0"
omnistore = "^0.0.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''